<resources>
    <string name="app_name">Billing System</string>
    <string name="my_name">Kashyap Jhaveri</string>
    <string name="my_student_id">C0775049</string>
    <string name="title_activity_login">Log In</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_remenber_me">Remember Me</string>

    <string name="action_log_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_id">Customer ID</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_bill_id">Bill ID</string>
    <string name="prompt_bill_date">Bill Date</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_agency_name">Agency Name</string>
    <string name="prompt_unit_consumed">Unit Consumed</string>
    <string name="prompt_provider_name">Provider Name</string>
    <string name="prompt_internet_gb_used">Internet Gb Used</string>
    <string name="prompt_manufacturer_name">Manufacturer Name</string>
    <string name="prompt_plan_name">Plan Name</string>
    <string name="prompt_minutes_used">Minutes Used</string>
    <string name="prompt_total_bill">Total Bill</string>


</resources>
